--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'checkstyle'
     id 'com.github.ben-manes.versions' version '0.39.0'
 }
 
