--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,8 +1,6 @@
 name: Java CI
 
-on:
-  - push
-  - pull_request
+on: [push]
 
 jobs:
   build:
@@ -10,10 +8,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up openJDK
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
-          java-version: '16'
+          java-version: '17'
+          distribution: 'adopt'
       - name: Build with Gradle
-        run: make build
+        run: ./gradlew build
